--- a/test/style.css
+++ b/test/style.css
@@ -63,6 +63,13 @@ h1, h2, h3, h4, h5, h6 {
 nav{
  display: block;
 }
+.container{
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
 .navbar .container, .navbar .container-fluid, .navbar .container-lg, .navbar .container-md, .navbar .container-sm, .navbar .container-xl {
     display: -ms-flexbox;
     display: flex;
@@ -86,6 +93,13 @@ nav{
  justify-content: space-between;
  padding: 0.5rem 1rem;
 }
+.navbar-brand{
+    display: inline-block;
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+}
+
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
  display: block;
@@ -108,8 +122,9 @@ header.masthead {
  background-color: #343a40;
  background: url(https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/bg-masthead.jpg) no-repeat center center;
  background-size: cover;
- padding-top: 8rem;
- padding-bottom: 8rem;
+ padding-top: 10rem;
+ padding-bottom: 10rem;
+ 
 } 
 
 header.masthead .overlay {
@@ -194,6 +209,7 @@ header.masthead h1 {
     color: #fff;
     background-color: #007bff;
     border-color: #007bff;
+    text-decoration: none;
 }
 
 
