--- a/test/style.css
+++ b/test/style.css
@@ -3,6 +3,8 @@ html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
+ max-width: 100%; 
+ overflow-x: hidden; 
 }
 
 :root {
@@ -48,14 +50,18 @@ body{
  background-color: #fff;
 }
 *, ::after, ::before {
- box-sizing: border-box;
+    box-sizing: border-box;
 }
+
 
 h1, h2, h3, h4, h5, h6 {
     font-family: Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
+div{
+    display: block;
 
+}
 .bg-light {
  background-color: #f8f9fa!important;
 }
@@ -71,27 +77,19 @@ nav{
     margin-left: auto;
 }
 .navbar .container, .navbar .container-fluid, .navbar .container-lg, .navbar .container-md, .navbar .container-sm, .navbar .container-xl {
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    -ms-flex-align: center;
     align-items: center;
-    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
 .navbar {
- position: relative;
- display: -ms-flexbox;
- display: flex;
- -ms-flex-wrap: wrap;
- flex-wrap: wrap;
- -ms-flex-align: center;
- align-items: center;
- -ms-flex-pack: justify;
- justify-content: space-between;
- padding: 0.5rem 1rem;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
 }
 .navbar-brand{
     display: inline-block;
@@ -100,9 +98,11 @@ nav{
     font-size: 20px;
 }
 
-
+a{
+    text-decoration: none;
+}
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
- display: block;
+    display: block;
 }
 
 *{
@@ -110,12 +110,10 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     margin: 0;
     box-sizing: border-box;
 }
-.container{
+.container-1{
     height: 85vh; 
     text-align: center;
     background-color: #f8f9fa;
-
-
 }
 .foto{
     border-radius: 50%;
@@ -124,10 +122,6 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     box-shadow: 0 5px 5px 0 #adb5bd;
     margin-bottom: 20px;
 }
-h1{
-    padding: 100px 0 50px 0;
-    
-}
 
 .image-grid{
     max-width: 1100px;
@@ -135,11 +129,8 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    
-    
-}
 
+}
 
 .image{
     width: 400px;
@@ -148,16 +139,16 @@ h1{
     font-size: 1rem;
     line-height: 1.5;
     margin: 0;
-    
-    
+}
+.container-grid{
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+}
+.text-grid{
+    padding-bottom: 3rem;
+    text-align: center;
 }
 
-@media (min-width: 768px){
-header.masthead {
-    padding-top: 12rem;
-    padding-bottom: 12rem;
-}
-}
 .text-white {
  color: #fff!important;
 }
@@ -171,7 +162,6 @@ header.masthead {
  background-size: cover;
  padding-top: 10rem;
  padding-bottom: 10rem;
- 
 } 
 
 header.masthead .overlay {
@@ -204,16 +194,9 @@ header.masthead h1 {
     margin-right: auto!important;
 }
 
-@media (min-width: 768px){
-.col-md-10 {
-    -ms-flex: 0 0 83.333333%;
-    flex: 0 0 83.333333%;
-    max-width: 83.333333%;
-}
-}
 
 
-.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5,  .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
     position: relative;
     width: 100%;
     padding-right: 15px;
@@ -265,7 +248,7 @@ header.masthead h1 {
     width: 100%;
     height: calc(1.5em + 0.75rem + 2px);
     padding: 0.375rem 0.75rem;
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
@@ -277,15 +260,6 @@ header.masthead h1 {
 }
 
 
-@media (min-width: 768px){
-.container, .container-md, .container-sm {
-    max-width: 720px;
-}}
-
-@media (min-width: 576px){
-.container, .container-sm {
-    max-width: 540px;
-}}
 
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
  width: 100%;
@@ -297,10 +271,129 @@ header.masthead h1 {
 
 
 .features-icons {
+    display: flex;
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+}
+.features-icons i {
+    font-size: 75px;
+}
+
+.showcase .showcase-img {
+    min-height: 30rem;
+    background-size: cover;
+}
+.showcase-text{
+    padding: 7rem; 
+}
+h3{
+    padding-top: 8px;
+}
+.text-center {
+    text-align: center!important;
+}
+.form-row{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -5px;
+    margin-left: -5px;
+
+}
+
+.form-row .col-12{
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.call-to-action {
+    position: relative;
+    background-color: #343a40;
+    background: url(https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/bg-masthead.jpg) no-repeat center center;
+    background-size: cover;
     padding-top: 7rem;
     padding-bottom: 7rem;
 }
 
-.text-center {
-    text-align: center!important;
+footer{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
+@media (min-width: 992px){
+.col-lg-4 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+}}
+
+@media (min-width: 768px){
+    header.masthead {
+        padding-top: 12rem;
+        padding-bottom: 12rem;
+}}
+
+@media (min-width: 576px){
+    .container {
+        max-width: 540px;
+}}
+@media (min-width: 576px){
+    .col-12, .col-md-9 {
+        flex: 0 0 100%;
+        max-width: 100%;
+}}
+
+@media (min-width: 768px){
+    .container {
+        max-width: 720px;
+}}
+       
+
+@media (min-width: 992px){
+    .container{
+        max-width: 960px;
+}}
+@media (min-width: 768px){
+    .col-md-10 {
+        flex: 0 0 83%;
+        max-width: 83%;
+}}
+
+@media (min-width: 768px){
+    header.masthead h1 {
+        font-size: 3rem;
+}}
+         
+@media (min-width: 768px){
+    .col-md-9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+}}
+
+@media (min-width: 992px){
+    .col-lg-8 {
+        flex: 0 0 66%;
+        max-width: 66%;
+}}
+
+@media (min-width: 768px){
+    .col-md-3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+}}
+@media (min-width: 1200px){
+    .col-xl-9 {
+        flex: 0 0 85%;
+        max-width: 85%;
+}}
+@media (min-width: 1200px){
+    .container {
+        max-width: 1140px;
+}}
+
+@media (min-width: 992px){
+.order-lg-2 {
+    order: 2;
+}}
+@media (min-width: 992px){
+.col-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+}}
